--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>FirstSite</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+<h1>Title</h1>
 </body>
 </html>
