--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<header class="header">
 
-<h1>Title</h1>
+</header>
 </body>
 </html>
